# nay

./: README.md  pyproject.toml
docs/source/: conf.py  description.rst  extended_operations.rst  index.rst  operations.rst  synopsis.rst
nay/: __init__.py  __main__.py  args.json  args.py  aur.py  clean.py  config.py  console.py  db.py  download.py  exceptions.py  get.py  get_pkgbuild.py  install.py  manager.py  operations.py  package.py  pure_wrappers.py  query.py  remove.py  sync.py  utils.py  wrapper.py  wrapper_funcs.py  wrappers.py
tests/: test_args.py  test_operations.py
